--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Django==3.1.2
+Django
 djangorestframework
-djangorestframework_simplejwt==4.4.0
-django-filter==2.4.0
-requests==2.25.0
-djangorestframework==3.12.2
+djangorestframework_simplejwt
+django-filter
+requests
+djangorestframework
 mysqlclient
 discord
 aiocron
